--- a/server/src/main/resources/templates/metrics-deleted.mustache
+++ b/server/src/main/resources/templates/metrics-deleted.mustache
@@ -1,2 +1,14 @@
-Metrics {{id}} was deleted
-<a href="/performance/metrics">Go back to list</a>
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+<div class="container">
+
+    Metrics {{id}} was deleted
+    <a href="/performance/metrics">Go back to list</a>
+
+</div>
+</body>
+</html>
