--- a/server/src/main/resources/templates/metrics-list.mustache
+++ b/server/src/main/resources/templates/metrics-list.mustache
@@ -1,6 +1,21 @@
-<h1>list of cloud runs</h1>
-<ul>
-    {{#.}}
-        <li><a href="/performance/metrics/{{id}}">{{value.label}} ({{value.cloudType}})</a> - <a href="/performance/metrics/delete/{{id}}">delete record</a></li>
-    {{/.}}
-</ul>
+<html>
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</head>
+<body>
+<div class="container">
+    <h1>list of cloud runs</h1>
+    <table class="table table-striped">
+        <tbody>
+        {{#.}}
+            <tr>
+                <td><a href="/performance/metrics/{{id}}">{{value.label}} ({{value.cloudType}})</a></td>
+                <td><a href="/performance/metrics/delete/{{id}}">delete record</a></td>
+            </tr>
+        {{/.}}
+        </tbody>
+    </table>
+</div>
+</body>
+</html>
