Graph title from metadata

--- a/server/src/main/resources/templates/graph-render-ec2.mustache
+++ b/server/src/main/resources/templates/graph-render-ec2.mustache
@@ -46,7 +46,7 @@
                 });
 
                 var layout = {
-                    title: 'Double Y Axis Example',
+                    title: '{{cloudType}} [{{id}}] {{value.label}}',
                     xaxis: {domain: [0.2, 0.8]},
                     yaxis: {
                         title: 'Ops',
