--- a/server/src/main/resources/templates/graph-render-azure.mustache
+++ b/server/src/main/resources/templates/graph-render-azure.mustache
@@ -42,7 +42,7 @@
                 });
 
                 var layout = {
-                    title: 'Double Y Axis Example',
+                    title: '{{cloudType}} [{{id}}] {{value.label}}',
                     xaxis: {domain: [0.2, 0.8]},
                     yaxis: {
                         title: 'Ops',
